2007-12-22  Wakaba  <wakaba@suika.fam.cx>

	* MediaList.pm: New placeholder for a CSSOM interface.

	* CSSRule.pm, CSSStyleSheet.pm: Implementing the initial
	setting of owner* and parent* attributes; support
	for the |delete_rule| method.

2007-12-22  Wakaba  <wakaba@suika.fam.cx>

	* CSSStyleSheet.pm, CSSRule.pm, CSSRuleList.pm, CSSStyleDeclaration.pm:
	First version of CSSOM implementation.

2007-11-18  Wakaba  <wakaba@suika.fam.cx>

	* Document.pm, Entity.pm (manakai_has_bom,
	manakai_charset): New attributes.

2007-11-11  Wakaba  <wakaba@suika.fam.cx>

	* Document.pm, Element.pm (inner_html): Use |Whatpm::HTML::Serializer|
	for getter.

2007-10-27  Wakaba  <wakaba@suika.fam.cx>

	* Event.pm (init_event, init_event_ns, init_custom_event_ns): 
	The |namespaceURI| attribute was not set correctly.

	* DOMEvents.dis: Removed.

2007-10-08  Wakaba  <wakaba@suika.fam.cx>

	* Event.pm, EventTarget.pm, EventTargetNode.pm,
	EventException.pm: Implemented (but not tested!).

	* DOMException.pm (MALFORMED_EVENT_TYPE_ERR,
	EVENT_INTERFACE_NOT_SUPPORTED_ERR, EXTERNAL_EVENT_ERR): New
	error subtypes.

	* DOMImplementation.pm ($HasFeature): The |Event| feature,
	version |3.0|, is added.

	* Document.pm, Node.pm: Event attributes and
	methods are implemented.

2007-10-07  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsAPI.pm ($get_elements_by_selectors): Receive
	an additional argument for "current element".
	Support for |-manakai-current| and |-manakai-current(/s/)|
	pseudo-classes.

2007-09-29  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsAPI.pm: Attribute selectors are implemented.

2007-09-29  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsAPI.pm (ElementSelector): Implemented.

2007-09-29  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsAPI.pm (query_selector): Implemented.

2007-09-29  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsAPI.pm ($get_elements_by_selectors): Created
	from most part of |query_selector_all|.

2007-09-24  Wakaba  <wakaba@suika.fam.cx>
