@@ -1,6 +1,6 @@
 package Message::DOM::CSSStyleDeclaration;
 use strict;
-our $VERSION=do{my @r=(q$Revision: 1.1 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
+our $VERSION=do{my @r=(q$Revision: 1.2 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
 push our @ISA, 'Message::IF::CSSStyleDeclaration';
 
 sub ____new ($) {
@@ -8,6 +8,11 @@ sub ____new ($) {
 } # ____new
 
 ## |CSSStyleDeclaration| attributes
+
+sub css_text ($;$) {
+  ## TODO: Implement ...
+  return '';
+} # css_text
 
 sub parent_rule ($) {
   return ${$_[0]}->{parent_rule};
@@ -18,4 +23,4 @@ sub parent_rule ($) {
 package Message::IF::CSSStyleDeclaration;
 
 1;
-## $Date: 2007/12/22 06:29:32 $
+## $Date: 2007/12/23 08:18:59 $
