@@ -1,3 +1,14 @@
+2007-12-23  Wakaba  <wakaba@suika.fam.cx>
+
+	* CSSRule.pm (type, css_text): Typo fixed.
+	(____new): s/_selector/_selectors/g;
+	(CSSStyleRule.css_text, selectors_text): Ad hoc implementation.
+
+	* CSSStyleDeclaration.pm (css_text): Ad hoc implementation.
+
+	* CSSStyleSheet.pm (new): s/new/____new/.
+	(css_text): New attribute.
+
 2007-12-22  Wakaba  <wakaba@suika.fam.cx>
 
 	* MediaList.pm: New placeholder for a CSSOM interface.
